--- a/01-Basic/01-OpenAI-APIKey.ipynb
+++ b/01-Basic/01-OpenAI-APIKey.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -99,6 +110,15 @@
     "        print(f\"{package_name}: {package_version}\")\n",
     "    except ImportError:\n",
     "        print(f\"{package_name}: 설치되지 않음\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ctrl + ` -> 터미널 창"
    ]
   }
  ],
