--- a/01-Basic/04-LCEL-Advanced.ipynb
+++ b/01-Basic/04-LCEL-Advanced.ipynb
@@ -34,10 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b5a5ffc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -48,10 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a4ccea96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -71,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "735d72ca",
    "metadata": {},
    "outputs": [],
@@ -106,10 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f6304f90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "멀티모달이란, 여러 가지 방식으로 정보를 전달하거나 입력받을 수 있는 시스템을 의미합니다. 이는 텍스트, 음성, 그래픽, 영상 등 다양한 형태의 데이터를 활용하여 사용자와 상호 작용하는 환경을 만들어줍니다. 멀티모달은 사용자 경험을 향상시키고, 보다 효율적으로 정보를 전달하고 소통하는 데 도움을 줄 수 있습니다."
+     ]
+    }
+   ],
    "source": [
     "# chain.stream 메서드를 사용하여 '멀티모달' 토픽에 대한 스트림을 생성하고 반복합니다.\n",
     "for token in chain.stream({\"topic\": \"멀티모달\"}):\n",
@@ -183,10 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2d5398d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ChatGPT는 OpenAI가 개발한 인공지능 채팅 시스템으로, 자연어 처리 기술을 사용하여 사람과의 대화를 시뮬레이트한다. 사용자의 질문에 대답하거나 특정 주제에 대해 정보를 제공하며, 커뮤니케이션 및 지식 전달에 활용되고 있다. 쉽고 효율적인 상호작용을 통해 사용자들에게 도움을 줄 수 있는 혁신적인 기술이다.',\n",
+       " 'Instagram은 사진 및 동영상을 공유하고 다른 사람들과 소통할 수 있는 소셜 미디어 플랫폼이다. 또한 해시태그를 통해 특정 주제나 관심사에 맞는 콘텐츠를 탐색할 수 있고, 다양한 필터와 편집 기능을 통해 사진을 보다 멋지게 꾸밀 수 있다. 인기 있는 인플루언서나 브랜드들이 활발하게 활동하며 시각적인 콘텐츠를 통해 광고 및 마케팅을 전개하는 플랫폼으로도 활용된다.',\n",
+       " '멀티모달은 여러 가지 다른 형태의 입력 또는 출력 방식을 한데 결합한 시스템이다. 예를 들어 음성, 텍스트, 이미지, 동영상 등 다양한 형태로 정보를 주고 받을 수 있는 것을 말한다. 이를 통해 보다 효율적이고 사용자 친화적인 경험을 제공할 수 있다.',\n",
+       " '프로그래밍이란 컴퓨터에게 명령을 내리는 것으로, 일련의 코드를 작성하여 컴퓨터에게 원하는 작업을 수행하도록 하는 일종의 커뮤니케이션 방법이다. 프로그래밍을 배우면 문제를 해결하고 새로운 아이디어를 실현하는 능력을 향상시킬 수 있으며, 다양한 분야에서 활용되는 기술을 습득할 수 있다.',\n",
+       " '머신러닝은 컴퓨터가 데이터를 학습하여 패턴을 찾고 예측하는 인공지능 기술이다. 이를 통해 머신러닝은 스스로 경험을 통해 성능을 향상시키며 더 정확한 결과를 도출할 수 있다. 이미 다양한 분야에서 활용되고 있으며, 미래에도 더 많은 혁신을 이룰 것으로 기대된다.']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chain.batch(\n",
     "    [\n",
@@ -249,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2038557a",
    "metadata": {},
    "outputs": [],
@@ -260,10 +304,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ea8077cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NVDA는 미국의 기술 기업인 NVIDIA Corporation의 주식 코드이다. NVDA 주가는 캘리포니아주 산타클라라에 본사를 둔 회사로서 GPU를 중심으로 하는 컴퓨팅 기술을 개발하고 제조하는데 주력하고 있다. NVDA는 주로 그래픽카드와 데이터센터를 위한 가속화 기술을 생산하여 세계적으로 유명한 기업이다.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 비동기로 처리되는 프로세스가 완료될 때까지 기다립니다.\n",
     "await my_process"
@@ -291,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "53a00116",
    "metadata": {},
    "outputs": [],
@@ -304,10 +359,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8823211b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['YouTube는 구글이 소유한 동영상 공유 플랫폼으로, 사용자들은 자신이 만든 동영상을 올리고 시청할 수 있다. 다양한 콘텐츠가 제공되며, 유튜버들은 수익을 창출할 수 있어 인기를 끌고 있다. 광고 연동과 구독자 수를 통해 수익을 창출할 수 있으며, 전 세계적으로 널리 이용되고 있는 플랫폼 중 하나이다.',\n",
+       " 'Instagram은 소셜 미디어 플랫폼으로, 사용자들이 사진과 동영상을 공유하고 다른 사람들과 소통할 수 있는 서비스입니다. 또한 타사의 게시물을 좋아하거나 댓글을 남기는 등의 상호작용이 가능하며, 스토리 기능을 통해 간편하게 단기간의 콘텐츠를 공유할 수도 있습니다. 현재 전 세계적으로 많은 사람들이 사용하고 있으며, 인기 있는 인플루언서들이 활동하는 플랫폼으로도 유명합니다.',\n",
+       " 'Facebook은 사람들이 서로 연결되고 소통할 수 있는 소셜 네트워크 서비스이다. 사용자들은 친구와 가족과 소통하며 사진이나 글을 공유할 수 있다. 또한 광고주들이 타겟팅 광고를 통해 사용자들에게 광고를 노출시킬 수 있는 플랫폼으로도 활용된다.']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 비동기로 처리되는 일괄 처리 프로세스가 완료될 때까지 기다립니다.\n",
     "await my_abatch_process"
@@ -338,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c2b42d05",
    "metadata": {},
    "outputs": [],
@@ -360,7 +428,9 @@
     ")\n",
     "\n",
     "# 위의 2개 체인을 동시에 생성하는 병렬 실행 체인을 생성합니다.\n",
-    "combined = RunnableParallel(capital=chain1, area=chain2)"
+    "combined = RunnableParallel(\n",
+    "    capital=chain1, area=chain2\n",
+    ")  # chain1과 chain2의 답변을 key-value 형태로 결합"
    ]
   },
   {
@@ -375,10 +445,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f04dbce0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'대한민국의 수도는 서울이다.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain1 를 실행합니다.\n",
     "chain1.invoke({\"country\": \"대한민국\"})"
@@ -394,10 +475,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5b055566",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'미국의 면적은 약 9,833,520 km² 입니다.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain2 를 실행합니다.\n",
     "chain2.invoke({\"country\": \"미국\"})"
@@ -415,10 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6fa82d78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'capital': '대한민국의 수도는 서울입니다.', 'area': '대한민국의 면적은 약 100,363km²이다.'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 병렬 실행 체인을 실행합니다.\n",
     "combined.invoke({\"country\": \"대한민국\"})"
@@ -445,10 +548,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0754e0ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['대한민국의 수도는 서울이다.', '미국의 수도는 워싱턴 D.C.입니다.']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 배치 처리를 수행합니다.\n",
     "chain1.batch([{\"country\": \"대한민국\"}, {\"country\": \"미국\"}])"
@@ -466,10 +580,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1f076b08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['대한민국의 면적은 약 100,363 제곱킬로미터입니다.', '미국의 총 면적은 약 9,834,000 km²입니다.']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 배치 처리를 수행합니다.\n",
     "chain2.batch([{\"country\": \"대한민국\"}, {\"country\": \"미국\"}])"
@@ -488,7 +613,20 @@
    "execution_count": null,
    "id": "aeec745e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'capital': '대한민국의 수도는 서울입니다.', 'area': '대한민국의 면적은 약 100,363km² 입니다.'},\n",
+       " {'capital': '미국의 수도는 워싱턴 D.C.이다.',\n",
+       "  'area': '미국의 총 면적은 약 9,833,520 평밀이며, 이는 전세계에서 세 번째로 큰 국가이다.'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 주어진 데이터를 배치로 처리합니다.\n",
     "combined.batch([{\"country\": \"대한민국\"}, {\"country\": \"미국\"}])"
@@ -497,7 +635,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py-test",
+   "display_name": "langchain-kr-_lMUvU-l-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
