--- a/01-Basic/05-Runnable.ipynb
+++ b/01-Basic/05-Runnable.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# .env 파일을 읽어서 환경변수로 설정\n",
     "from dotenv import load_dotenv\n",
@@ -15,9 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -47,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='50', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1, 'prompt_tokens': 16, 'total_tokens': 17, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-BadO5LLi5TysRarl11fIrVNW8HuqV', 'finish_reason': 'stop', 'logprobs': None}, id='run-51758711-dd84-47f2-8ef6-eb834fc88057-0', usage_metadata={'input_tokens': 16, 'output_tokens': 1, 'total_tokens': 17, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain 을 실행합니다.\n",
     "chain.invoke({\"num\": 5})"
@@ -89,12 +121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='50', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1, 'prompt_tokens': 16, 'total_tokens': 17, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-BadO54NlS9a1gqc96f6KmUxmxi2R7', 'finish_reason': 'stop', 'logprobs': None}, id='run-d038d662-2597-4172-b227-af07eb0a8e77-0', usage_metadata={'input_tokens': 16, 'output_tokens': 1, 'total_tokens': 17, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain 을 실행합니다.\n",
-    "chain.invoke(5)"
+    "chain.invoke(5)  # 변수가 하나일 때는 예외적으로 키 값을 안 적어도 됨."
    ]
   },
   {
@@ -108,9 +151,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num': 10}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.runnables import RunnablePassthrough\n",
     "\n",
@@ -127,9 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='100입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 16, 'total_tokens': 19, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-BadO6sqDrn7BbPCNyhVUaNqgL9sjZ', 'finish_reason': 'stop', 'logprobs': None}, id='run-433f76f9-5c8b-40dc-9ca6-33c4d538e135-0', usage_metadata={'input_tokens': 16, 'output_tokens': 3, 'total_tokens': 19, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "runnable_chain = {\"num\": RunnablePassthrough()} | prompt | ChatOpenAI()\n",
     "\n",
@@ -146,9 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num': 1}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "RunnablePassthrough().invoke({\"num\": 1})"
    ]
@@ -164,9 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num': 1, 'new_num': 3}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 입력 키: num, 할당(assign) 키: new_num\n",
     "(RunnablePassthrough.assign(new_num=lambda x: x[\"num\"] * 3)).invoke({\"num\": 1})"
@@ -181,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'passed': {'num': 1}, 'extra': {'num': 1, 'mult': 3}, 'modified': 2}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.runnables import RunnableParallel\n",
     "\n",
@@ -210,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'capital': AIMessage(content='서울입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 5, 'prompt_tokens': 19, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-BadO7xBeCkkpRLQdtNYyKpSbbDcRk', 'finish_reason': 'stop', 'logprobs': None}, id='run-fa3c9196-88e7-4c0d-99b5-bf1e78552ade-0', usage_metadata={'input_tokens': 19, 'output_tokens': 5, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}),\n",
+       " 'area': AIMessage(content='대한민국의 면적은 약 100,363km² 입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 22, 'prompt_tokens': 20, 'total_tokens': 42, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-BadO73lIY1PJJrKGtA3y4YQsMEwsu', 'finish_reason': 'stop', 'logprobs': None}, id='run-2d0d1498-4b62-4c4b-9ff6-ac523ad26f11-0', usage_metadata={'input_tokens': 20, 'output_tokens': 22, 'total_tokens': 42, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combined_chain = RunnableParallel(capital=chain1, area=chain2)\n",
     "combined_chain.invoke(\"대한민국\")"
@@ -247,9 +357,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_today 함수 호출, 입력 받은 값 None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'May-24'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -257,7 +385,10 @@
     "from datetime import datetime\n",
     "\n",
     "\n",
-    "def get_today(a):\n",
+    "def get_today(\n",
+    "    a,\n",
+    "):  # 매개변수가 꼭 명시되어야 하는 이유 - runnable invoke 시에 매개변수가 꼭 들어가기 때문에 런타임 에러가 발생함.\n",
+    "    print(f\"get_today 함수 호출, 입력 받은 값 {a}\")\n",
     "    # 오늘 날짜를 가져오기\n",
     "    return datetime.today().strftime(\"%b-%d\")\n",
     "\n",
@@ -268,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,24 +422,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_today 함수 호출, 입력 받은 값 3\n",
+      "5월 24일이 생일인 유명인 세 명은 다음과 같습니다.\n",
+      "\n",
+      "1. 밥 딜런 (Bob Dylan) - 1941년 5월 24일\n",
+      "2. 프리실라 프레슬리 (Priscilla Presley) - 1945년 5월 24일\n",
+      "3. 존 C. 라일리 (John C. Reilly) - 1965년 5월 24일\n"
+     ]
+    }
+   ],
    "source": [
     "# 출력\n",
     "print(chain.invoke(3))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "`itemgetter` 를 사용하여 특정 키를 추출합니다."
+    "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
+    "from operator import itemgetter  # 딕셔너리에서 값만 추출\n",
+    "\n",
+    "# prompt 와 llm 을 생성합니다.\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"{today} 가 생일인 유명인 {n} 명을 나열하세요. 생년월일을 표기해 주세요.\"\n",
+    ")\n",
+    "llm = ChatOpenAI(temperature=0, model_name=\"gpt-4o\")\n",
+    "\n",
+    "# chain 을 생성합니다.\n",
+    "chain = (\n",
+    "    {\"today\": RunnableLambda(get_today), \"n\": itemgetter(\"n\")}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_today 함수 호출, 입력 받은 값 {'n': 3}\n",
+      "5월 24일이 생일인 유명인 세 명은 다음과 같습니다.\n",
+      "\n",
+      "1. 밥 딜런 (Bob Dylan) - 1941년 5월 24일\n",
+      "2. 프리실라 프레슬리 (Priscilla Presley) - 1945년 5월 24일\n",
+      "3. 존 C. 라일리 (John C. Reilly) - 1965년 5월 24일\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chain.invoke({\"n\": 3}))\n",
+    "# 이렇게 넣으면 딕셔너리 자체가 모두 넘어감.\n",
+    "# RunnablePassthrough는 사용자 입력 값 전체를 넘겨 받음.\n",
+    "# 하지만 결과는 잘 나옴. 딕셔너리 자체는 다 넘어감.(랭스미스 확인)\n",
+    "# 딕셔너리 값을 추출해서 쓰랴ㅕ면 itemgetter를 이용."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`itemgetter` 를 사용하여 특정 키를 추출합니다.\n",
+    "딕셔너리로 받은 값을 추출함."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +549,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='5 + 25 = 30입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 22, 'total_tokens': 31, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-BadRuKbHgIfG1dOB0vfwIy1MN0G2Z', 'finish_reason': 'stop', 'logprobs': None}, id='run-38ef9856-1eb6-431e-946d-dd9f0dc485f2-0', usage_metadata={'input_tokens': 22, 'output_tokens': 9, 'total_tokens': 31, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chain.invoke({\"word1\": \"hello\", \"word2\": \"world\"})"
    ]
@@ -362,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py-test",
+   "display_name": "langchain-kr-_lMUvU-l-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
